--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile 'net.dv8tion:JDA:+'
     compile 'com.google.inject:guice:+'
     compile 'com.google.code.gson:gson:+'
+    compile 'com.google.apis:google-api-services-dialogflow:v2beta1-rev18-1.23.0'
 }
 
 shadowJar {
@@ -26,8 +27,6 @@ shadowJar {
     exclude 'META-INF/*.DSA'
     exclude 'META-INF/*.RSA'
 }
-
-compileJava.source sourceSets.main.java
 
 
 compileJava.options.encoding = 'UTF-8'
